--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         }
     ],
     "dependencies": {
-       "jsdom"      : "0.2.x",
+       "jsdom"      : "0.2.14",
+       "cssom"      : "0.2.5",
        "requireJS"  : ">=2.0.6",
        "socket.io"  : ">=0.9.10",
        "node-proxy" : ">=0.5.2",
