Updated jQuery 1.6 -> 1.7.3 + Added to package.json

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
        "jsdom"      : "0.2.14",
        "cssom"      : "0.2.5",
+       "jquery"     : "1.7.3",
        "requireJS"  : ">=2.0.6",
        "socket.io"  : ">=0.9.10",
        "node-proxy" : ">=0.5.2",
