included Ace directly into the project, it bugs a lot with requirejs.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "public/ace"]
-	path = public/ace
-	url = https://github.com/ajaxorg/ace.git
 [submodule "SlickGrid"]
 	path = SlickGrid
 	url = https://github.com/mleibman/SlickGrid.git
+[submodule "public/libs/ace"]
+	path = public/libs/ace
+	url = https://github.com/ajaxorg/ace.git
