--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
         }
     ],
     "dependencies": {
-       "jsdom"      : "0.2.14",
-       "cssom"      : "0.2.5",
-       "jquery"     : "1.7.3",
-       "requireJS"  : ">=2.0.6",
-       "socket.io"  : ">=0.9.10",
-       "node-proxy" : ">=0.5.2",
-       "node-static": ">=0.6.1"
+       "request"        : ">=2.11.0",
+       "jsdom"          : "0.2.14",
+       "cssom"          : "0.2.5",
+       "jquery"         : "1.7.3",
+       "requireJS"      : ">=2.0.6",
+       "socket.io"      : ">=0.9.10",
+       "node-proxy"     : ">=0.5.2",
+       "node-static"    : ">=0.6.1",
+       "node-native-zip": ">=1.1.0"
       },
     "devDependencies": {
        "should"     : ">=1.1.0",
